# recepies_restapi

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: deserts.py  orders.py  posts.py  recepies.py  users.py
app/api/schemas/: deserts.py  orders.py  recipes.py
app/core/: config.py  database.py
app/db/cruds/: deserts.py  orders.py  posts.py  recepies.py
app/db/models/: deserts.py  orders.py  recipes.py
migrations/: env.py
migrations/versions/: 0bf528040c31_added_orders_table.py  0d728679392b_orders_table_add_created_at.py  62eee79a261b_added_recipes_table.py  d5f540524f29_add_deserts_table.py
