[tool.poetry]
name = "recepies-restapi"
version = "0.1.0"
description = ""
authors = ["xander <moroz070688@gmail.com>"]
readme = "README.md"
packages = [{include = "recepies_restapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
databases = "^0.7.0"
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
